k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP
  selector:
    app: flask
    version: blue
  ports:
  - port: 5000
    targetPort: 5000
